# fastpercentile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
fastpercentile/: core.py
tests/: conftest.py  test_axis.py  test_float.py  test_percentile.py  test_wide_integers.py
tests/benchmarks/: benchmark_volume.py
