[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'fastpercentile'
version = '0.2.2'
description = 'Very fast percentile calculation for small-integer dtypes via parallel histogram'
readme.file = 'README.md'
readme.content-type = 'text/markdown'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
keywords = ['percentile', 'quantile', 'histogram', 'numba', 'numpy', 'fast']
authors = [{name = 'Jasper Phelps', email = 'jasper.s.phelps@gmail.com'}]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering',
]
urls = {Repository = 'https://github.com/jasper-tms/fastpercentile'}
dependencies = [
    'numpy',
    'numba',
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'pynrrd',
]

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.setuptools.packages.find]
include = ['fastpercentile']
